fix(consonant): fix browser compatibility for gap css attribute

--- a/templates/consonant/blocks/images/images.css
+++ b/templates/consonant/blocks/images/images.css
@@ -17,7 +17,10 @@ main .images > div {
 
 main .images > div > div {
     display: flex;
-    gap: 32px;
+}
+
+main .images > div > div > *:not(:last-child) {
+    margin-right: 32px;
 }
 
 main .images picture {
@@ -64,7 +67,7 @@ main .images p.icon-container a {
 }
 
 @media screen and (max-width: 900px) {
-    main .images > div > div {
-        gap: 8px;
+    main .images > div > div > *:not(:last-child) {
+        margin-right: 8px;
     }
 }
